2024-08-06_exainfra_kubernetes/day2/kubernetes-training/01_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-hello-world
  labels:
    app: simple-hello-world
    xxx: example
spec:
  containers:
    - name: main
      image: ondrejsika/training-example
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Mi
          cpu: 20m
