2024-08-06_exainfra_kubernetes/day2/kubernetes-training/04_01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  revisionHistoryLimit: 0
  replicas: 10
  strategy:
  #   type: RollingUpdate
    type: Recreate
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        svc: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example:green
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
