2024-08-06_exainfra_kubernetes/day2/kubernetes-training/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  revisionHistoryLimit: 0
  replicas: 5
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
        svc: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example:green
          ports:
            - name: http
              containerPort: 80
            - name: metrics
              containerPort: 8001
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
