2024-08-06_exainfra_kubernetes/day2/kubernetes-training/init_containers_migrations_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-container-migrations
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: init-container-migrations
  replicas: 5
  template:
    metadata:
      labels:
        app: init-container-migrations
        svc: example
    spec:
      serviceAccountName: job-read
      containers:
        - name: main
          image: ondrejsika/training-example
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 10Mi
              cpu: 11m
            limits:
              memory: 100Mi
              cpu: 20m
