2024-08-06_exainfra_kubernetes/day2/kubernetes-training/pod_with_hostpath.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-hostpath
spec:
  volumes:
    - name: data
      hostPath:
        path: /data/pod-with-hostpath
        type: DirectoryOrCreate
  containers:
    - name: main
      image: sikalabs/nginx-public
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Mi
          cpu: 20m
      volumeMounts:
        - name: data
