2024-08-06_exainfra_kubernetes/day2/kubernetes-training/loadbalancer_redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  # annotations:
  #   metallb.universe.tf/loadBalancerIPs: 
spec:
  type: LoadBalancer
  selector:
    app: example
  ports:
    - port: 80
