2024-08-06_exainfra_kubernetes/day2/kubernetes-training/probes_startup.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startup
  labels:
    app: startup
spec:
  replicas: 10
  selector:
    matchLabels:
      app: startup
  template:
    metadata:
      labels:
        app: startup
        svc: example
    spec:
      containers:
        - name: main
          image: sikalabs/slu:v0.72.0
          command:
            - /bin/sh
            - -c
          args:
            - slu sleep random --min 0 --max 30000 && slu example-server -p 8000
          startupProbe:
            httpGet:
              path: /
              port: 8000
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 20Mi
              cpu: 20m
            limits:
              memory: 40Mi
              cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: startup
spec:
  type: ClusterIP
  selector:
    app: startup
  ports:
    - port: 80
      targetPort: 8000
